Use global script instead of Mermaid component to avoid wrapping all the code fences into it

--- a/src/globals.css
+++ b/src/globals.css
@@ -512,6 +512,11 @@ astro-island[component-export="GraphQLEditor"] {
   }
 }
 
+/* Using attribute selector instead of :has() for better compatibility */
+figure pre[data-language="mermaid"] {
+  display: none;
+}
+
 header.header {
   padding-top: 0;
   padding-bottom: 0;
